# gym-trainer

./: .dockerignore  .env.example  .env.example.swp  .gitignore  Dockerfile  README.md  pyproject.toml
src/gym_agent/: __init__.py  bot.py  coach.py  config.py  db.py  parsing.py  web.py
tests/: test_db.py  test_parsing.py
