[project]
name = "gym-agent"
version = "0.1.0"
description = "A Telegram-first personal weightlifting coach"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.75,<3",
  "python-dotenv>=1.0,<2",
  "python-telegram-bot>=22,<23",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.11,<1"]

[project.scripts]
gym-agent = "gym_agent.bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gym_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

